tests/miniJava/neg/000286_mutation.MiniJava
class java { public static void Main length ( String [ ] java ) { { } } }
